fix #6599: ui: use font-awesome hdd icon instead of png
previously we used custom png rendered for storages in the add menu of
a pool, as well as for mountpoints of containers. these appeared
blurry on high resolution displays and since they were just the same
as the font-awesome icons anyway, use those directly. the ui already
loads font-awesome regardless, so there are no down-sides here.

Link: https://lore.proxmox.com/20250826145836.302748-2-s.sterz@proxmox.com

--- a/www/css/ext6-pve.css
+++ b/www/css/ext6-pve.css
@@ -313,7 +313,6 @@
 .pve-itype-icon-swap,
 .pve-itype-icon-node,
 .pve-itype-icon-node-running,
-.pve-itype-icon-storage,
 .pve-itype-icon-pool,
 .pve-itype-icon-itype,
 .pve-itype-icon-usb,
@@ -364,12 +363,6 @@
 .x-tree-node-lxc-running,
 .x-grid-tree-node-expanded .x-tree-node-lxc-running {
     background-image: url(../images/lxc-on.png);
-}
-
-.pve-itype-icon-storage,
-.x-tree-node-harddisk,
-.x-grid-tree-node-expanded .x-tree-node-harddisk {
-    background-image: url(../images/icon-harddisk.png);
 }
 
 .x-tree-node-snapshot,
